Fix some padding errors, make sure the Editor buttons do not overflow.

--- a/frontend/src/modules/entitydetails/components/Editor.css
+++ b/frontend/src/modules/entitydetails/components/Editor.css
@@ -1,8 +1,10 @@
 .editor {
     background: rgb(39, 42, 47);
     border-bottom: 1px solid #5E6475;
+    display: flex;
+    flex-direction: column;
     height: calc(20% + 60px);
-    min-height: 100px;
+    min-height: 200px;
 }
 
 .editor > textarea {
@@ -30,6 +32,7 @@
     border: none;
     color: #EBEBEB;
     height: 40px;
+    margin: 0 2px;
     padding: 10px 3px;
     text-transform: uppercase;
 }
