--- a/frontend/src/modules/entitydetails/components/Metadata.css
+++ b/frontend/src/modules/entitydetails/components/Metadata.css
@@ -41,4 +41,5 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    padding-top: 6px;
 }
